# Object-Oriented-Programming-Course

./: .gitignore  CMakeLists.txt
Practice_1/: main.cpp
Practice_1/source/: Console.cpp  Console.h  DateMath.h  Person.cpp  Person.h
Practice_2/: P2.cpp
Practice_2/source/: Console.cpp  DateMath.h  Input.cpp  Input.h  Person.cpp  Person.h
Practice_2/source/Core/: Console.cpp  Console.h  DateMath.h  Log.cpp  Log.h  _CORE.h
Practice_2/source/GUI/: GTKAPI.cpp  GTKAPI.h  GTKWrapper.cpp
Practice_2/source/GUI/FLTK/: API.cpp  API.h  Back.cpp  Back.h  Callbacks.h  Fl_Widget_Wrapper.h  Front.cpp  Front.h
Practice_2/source/Input/: Input.cpp  Input.h  Validation.cpp  Validation.h
Practice_2/source/Person/: Person.cpp  Person.h
scripts/windows/: libs.bat
